# grouter

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  deps.bzl  go.mod  router.go  router_test.go  rule.go  rule_test.go
example/: BUILD.bazel  server.go
